--- a/src/ManageMint/Shared/MainLayout.razor
+++ b/src/ManageMint/Shared/MainLayout.razor
@@ -14,6 +14,8 @@
     <MudAppBar Color="Color.Primary" Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle"/>
         <MudSpacer/>
+        <AccessControl/>
+        <MudSpacer/>
         <MudIconButton Icon="@icon" Color="Color.Inherit" Edge="Edge.End" OnClick="ToggleMode" Style="justify-self: right"/>
         <MudSpacer/>
         <AppMenu/>
