--- a/src/ManageMint/Shared/MainLayout.razor
+++ b/src/ManageMint/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
 <MudSnackbarProvider/>
 
 <MudLayout>
-    <MudAppBar Color="Color.Primary" Fixed="false">
+    <MudAppBar Color="Color.Primary" Fixed="true">
             <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="DrawerToggle"/>
         </MudAppBar>
     <MudDrawer @bind-Open="drawerOpen" Elevation="0" ClipMode="DrawerClipMode.Always" Variant="DrawerVariant.Mini" Anchor="Anchor.Left">
