--- a/src/ManageMint/Shared/MainLayout.razor
+++ b/src/ManageMint/Shared/MainLayout.razor
@@ -19,24 +19,30 @@
             <MudNavLink
                 Href="diary"
                 Icon="@Icons.Material.Outlined.MenuBook">Diaries</MudNavLink>
-            <MudNavGroup Title="People" Icon="@Icons.Material.Outlined.PeopleAlt">
-                <MudNavGroup Title="Managers" Icon="@Icons.Material.Outlined.SupervisorAccount">
-                    <MudNavLink
-                        Href="managers"
-                        Icon="@Icons.Material.Outlined.SupervisorAccount">View</MudNavLink>
-                    <MudNavLink
-                        Href="addManager"
-                        Icon="@Icons.Material.Outlined.PersonAddAlt">Add</MudNavLink>
-                </MudNavGroup>
-                <MudNavGroup Title="Reports" Icon="@Icons.Material.Outlined.Groups">
-                    <MudNavLink
-                        Href="reports"
-                        Icon="@Icons.Material.Outlined.Groups">View</MudNavLink>
-                    <MudNavLink
-                        Href="addReport"
-                        Icon="@Icons.Material.Outlined.PersonAdd">Add</MudNavLink>
-                </MudNavGroup>
-            </MudNavGroup>
+            <MudNavLink
+                Href="managers"
+                Icon="@Icons.Material.Outlined.SupervisorAccount">Managers</MudNavLink>
+            <MudNavLink
+                Href="reports"
+                Icon="@Icons.Material.Outlined.Groups">Reports</MudNavLink>
+            @* <MudNavGroup Title="People" Icon="@Icons.Material.Outlined.PeopleAlt"> *@
+            @*     <MudNavGroup Title="Managers" Icon="@Icons.Material.Outlined.SupervisorAccount"> *@
+            @*         <MudNavLink *@
+            @*             Href="managers" *@
+            @*             Icon="@Icons.Material.Outlined.SupervisorAccount">View</MudNavLink> *@
+            @*         <MudNavLink *@
+            @*             Href="addManager" *@
+            @*             Icon="@Icons.Material.Outlined.PersonAddAlt">Add</MudNavLink> *@
+            @*     </MudNavGroup> *@
+            @*     <MudNavGroup Title="Reports" Icon="@Icons.Material.Outlined.Groups"> *@
+            @*         <MudNavLink *@
+            @*             Href="reports" *@
+            @*             Icon="@Icons.Material.Outlined.Groups">View</MudNavLink> *@
+            @*         <MudNavLink *@
+            @*             Href="addReport" *@
+            @*             Icon="@Icons.Material.Outlined.PersonAdd">Add</MudNavLink> *@
+            @*     </MudNavGroup> *@
+            @* </MudNavGroup> *@
             <MudNavGroup Title="Discussion Topics" Icon="@Icons.Material.Outlined.VideoCameraFront">
                 
             </MudNavGroup>
