--- a/src/ManageMint/Pages/People.razor
+++ b/src/ManageMint/Pages/People.razor
@@ -1,6 +1,6 @@
-﻿@page "/counter"
+﻿@page "/people"
 
-<h1>Counter</h1>
+<h1>People Management</h1>
 
 <p role="status">Current count: @currentCount</p>
 
